--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "typescript": "~4.0.2"
   },
   "engines": {
-    "node": "12.18.1",
-    "npm": "6.14.5"
+    "node": "^12.18.1",
+    "npm": "^6.14.5"
   }
 }
