--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
     "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -46,7 +47,7 @@
     "typescript": "~4.0.2"
   },
   "engines": {
-    "node": "^12.18.1",
-    "npm": "^6.14.5"
+    "node": "^14.15.3",
+    "npm": "^6.14.9"
   }
 }
