--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/effects": "^11.1.1",
     "@ngrx/store": "^11.1.1",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.5.0",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "path": "^0.12.7",
