--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "path": "^0.12.7",
     "rxjs": "^7.2.0",
     "tslib": "^2.3.0",
+    "web-push": "^3.4.5",
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
